Refactored minor issues in AccountApi project